--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Assets\YandexGame\Example\Scripts\LanguageExample.cs" />
     <Compile Include="Assets\Scripts\StateMachineEnemy\RunStateEnemy.cs" />
     <Compile Include="Assets\Scripts\Player\SetMaterialToInvisible.cs" />
+    <Compile Include="Assets\Scripts\Player\RotateTransformBullet.cs" />
     <Compile Include="Assets\Scripts\Door.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\JMO Assets\WarFX\Scripts\WFX_LightFlicker.cs" />
